--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,3 +3,6 @@ RewriteBase /
 
 RewriteCond %{REQUEST_URI} ^/articles/([a-zA-Z0-9_-]+)$
 RewriteRule ^(.*)$ /?articlesSlug=%1 [L]
+
+RewriteCond %{REQUEST_URI} ^/sections/([a-zA-Z0-9_-]+)$
+RewriteRule ^(.*)$ /?sectionsSlug=%1 [L]
