--- a/public/.htaccess
+++ b/public/.htaccess
@@ -7,3 +7,6 @@ RewriteRule ^(.*)$ /?articlesSlug=%1 [L]
 
 RewriteCond %{REQUEST_URI} ^/sections/([a-zA-Z0-9_-]+)$
 RewriteRule ^(.*)$ /?sectionsSlug=%1 [L]
+
+RewriteCond %{REQUEST_URI} ^/connect$
+RewriteRule ^(.*)$ /?connect=ok [L]
